src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ApeMaterno__c</fullName>
        <description>Apellido Materno de la cuenta</description>
        <label>Apellido Materno</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <label>Código postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle__c</fullName>
        <label>Calle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonia__c</fullName>
        <label>Colonia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstadoCivil__c</fullName>
        <description>Estado Civil de la cuenta</description>
        <label>Estado Civil</label>
        <picklist>
            <picklistValues>
                <fullName>Soltero</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Casado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorciado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EstadoOtro__c</fullName>
        <label>Estado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Estado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.TipoUbicacion__c</field>
                <operation>equals</operation>
                <value>Estado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuenta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.TipoUbicacion__c</field>
                <operation>equals</operation>
                <value>Municipio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Cuentas (Municipio)</relationshipLabel>
        <relationshipName>Cuentas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumeroExterior__c</fullName>
        <label>Numero exterior</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroInterior__c</fullName>
        <label>Numero interior</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pais</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ubicacion__c.TipoUbicacion__c</field>
                <operation>equals</operation>
                <value>País</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ubicacion__c</referenceTo>
        <relationshipLabel>Cuentas (Pais)</relationshipLabel>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <label>Sexo</label>
        <picklist>
            <picklistValues>
                <fullName>Masculino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femenino</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>